--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div id="bottom">
         <div id="footer">
-            Copyright &#169; 2016 C&#259;lin Ilie
+            Copyright &#169; 2016 C&#259;lin Ilie. Check me out on <a href="https://github.com/colinx05/graph-visualizer">Github</a>
         </div>
     </div>
 </body>
