--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
                     <h5>Input graph</h5>
                     <input type="radio" name="type" value="adjacency" checked> Adjacency Matrix <br>
                     <input type="radio" name="type" value="edgelist"> Arch List<br>
-                    <h5>Generate random graph</h5>
-                    <input type="radio" name="type" value="disconnected" checked> Disconnected <br>
-                    <input type="radio" name="type" value="connected"> Connected [beta] <br>
+                    <h5>Randomize: </h5>
+                    <input type="radio" name="type" value="random" checked> Generate new graph <br>
                     <button type="submit" id="render-button">Render</button>
                 </fieldset>
             </form>
@@ -58,7 +57,7 @@
 
     <div id="bottom">
         <div id="footer">
-            Copyright &#169; 2016-2020 C&#259;lin Ilie. Check me out on <a href="https://github.com/calini/graph-visualizer">Github</a>
+            Copyright &#169; 2016 C&#259;lin Ilie. Check me out on <a href="https://github.com/calini/graph-visualizer">Github</a>
         </div>
     </div>
 </body>
